<resources>
    <string name="app_name">AADisplay</string>
    <string name="unknown_error">unknown error</string>
    <string name="details">details</string>
    <string name="xposeddescription">AADisplay</string>
    <string name="info_system_version">System Version</string>
    <string name="info_root_privilege">Root Privilege</string>
    <string name="activated">Activated</string>
    <string name="need_reboot">Need Reboot</string>
    <string name="not_activated">Not Activated</string>
    <string name="reboot">Reboot</string>
    <string name="menu_github">GitHub</string>
    <string name="auto_open_title">Auto Open</string>
    <string name="auto_open_summary">Automatically open app when Android Auto is connected</string>
    <string name="disable_waze_on_aa_title">Disable Waze on AA</string>
    <string name="disable_waze_on_aa_summary">This will keep the map open on your device, not AA</string>
    <string name="disable_waze_on_aa_apply_failed">Failed to apply Disable Waze on AA setting</string>
    <string name="disable_google_maps_on_aa_title">Disable Google Maps on AA</string>
    <string name="disable_google_maps_on_aa_summary">This will keep Google Maps on your device, not AA</string>
    <string name="disable_google_maps_on_aa_apply_failed">Failed to apply Disable Google Maps on AA setting</string>
    <string name="default_launch_package_title">Default Launch Package</string>
    <string name="default_launch_package_summary">App package launched when AADisplay starts</string>
    <string name="default_launch_package_empty">Default Launch Package is required</string>
    <string name="default_home_detected">Default Home Launcher: %1$s</string>
    <string name="default_home_unknown">Default Home Launcher: Not detected</string>
    <string name="launcher_list_missing">No launcher packages detected on this device</string>
    <string name="single_launcher_warning">Only one launcher is installed. Using the same launcher as your default home launcher can cause a fatal crash. Install a second launcher first.</string>
    <string name="package_same_error">You cannot set the Default Launch Package to the same as your device\'s Default (Launcher) Home app</string>
    <string name="package_validation_ok">Launch package is safe to use</string>
    <string name="save_settings">Save</string>
    <string name="delay_destroy_time_title">Delay Destroy Time</string>
    <string name="delay_destroy_time_invalid">Select a valid Delay Destroy Time</string>
    <string name="delay_60_seconds">60 Seconds</string>
    <string name="delay_120_seconds">120 Seconds</string>
    <string name="delay_180_seconds">180 Seconds</string>
    <string name="settings_saved_successfully">Settings saved successfully</string>
    <string name="settings_saved_pref_access_failed">Settings saved, but hook preference access could not be verified</string>
    <string name="controller_open_menu">Open controller menu</string>
    <string name="controller_hide_menu">Hide controller menu</string>
</resources>
